[package]
name = "xuper-client-sdk"
version = "0.1.0"
authors = ["duanbing <duanbing@baidu.com>"]
edition = "2018"

[dependencies]
xchain_crypto    = { path = "../xchain-crypto"}
xchain_node_sdk    = { path = "../xchain-node-sdk"}

hex              = "0.4.0"
base64           = "0.12.1"
grpc             = "0.8.0"
grpc-protobuf    = "0.8.0"
protobuf         = { version = "2.14.0", features = ["with-serde"] }
serde_json       = "1.0.40"

num-bigint       = { version = "0.2.3", features = ["serde"] }
num-traits       = "0.2.10"

futures          = "~0.3"
rand             = "0.7.3"
rand_core        = "0.5.1"

[features]
default = ["with-serde"]
with-serde = []
