[package]
name = "xchain_node_sdk"
version = "0.1.0"
authors = ["chenzhiyu <chen-zhiyu+chen.zhiyu@users.noreply.github.com>"]
edition = "2018"

[features]
default = ["with-serde"]
with-serde = []

[dependencies]
xchain_crypto    = { path = "../xchain-crypto"}

serde            = {  version = "1.0.104", features = ["derive"]}
serde_repr       = "0.1"
serde_derive     = "1.0.104"
serde_json       = "1.0.40"
serde_yaml       = "0.8"


hex              = "0.4.0"
lazy_static      = "1.1.1"
base64           = "0.12.1"


num-bigint       = { version = "0.2.3", features = ["serde"] }
num-traits       = "0.2.10"

grpc             = "0.8.0"
grpc-protobuf    = "0.8.0"
protobuf         = { version = "2.14.0", features = ["with-serde"] }

[build-dependencies]
protoc-rust      = "2.14.0"
protoc-rust-grpc = "0.8.0"


